# library_system

./: .gitignore  Makefile  pyproject.toml  pytest.ini  requirements.txt
library_management/: .dockerignore  .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run.py  settings.py
library_management/alembic/: env.py
library_management/alembic/versions/: 30efbdc05bc6_create_members_table.py  afdb93698f0d_create_books_table.py
library_management/app/: __init__.py  main.py
library_management/app/domain/events/: book_events.py  member_events.py
library_management/app/domain/models/: book.py  member.py
library_management/app/domain/services/: book_service.py  member_service.py
library_management/app/helper/: exceptions.py  help_function.py
library_management/app/infrastructure/: db.py
library_management/app/infrastructure/kafka/: consumer.py  producer.py
library_management/app/infrastructure/repositories/: book_repository.py  member_repository.py
library_management/app/presentation/models/: book_model.py  member_model.py
library_management/app/presentation/routes/: book_routes.py  member_routes.py
library_management/app/validators/: book_validator.py
library_management/frontend/: Dockerfile
library_management/tests/: __init__.py  conftest.py
library_management/tests/repository/: test_book_repository.py  test_member_repository.py
library_management/tests/routes/: test_book_routes.py  test_member_routes.py
library_management/tests/service/: test_book_service.py  test_member_service.py
(+12 files in other folders)
