[project]
name = "task1"
version = "0.1.0"
description = ""
authors = [
    {name = "hay20228048",email = "hay20228048@std.psut.edu.jo"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
